# edward.seo

./: README.md  pyproject.toml
ai_advanced_edward_seo/assets/: prompt_template_hallucination_checker.txt  prompt_template_question_router.txt  prompt_template_relevance_checker.txt  prompt_template_response_generator.txt  queries_for_all_not_relevant.txt  queries_for_all_relevant.txt  test_urls.txt
ai_advanced_edward_seo/base/: doc_container.py  hallucination_checker.py  question_router.py  relevance_checker.py  response_generator.py  retriever.py  web_search.py
ai_advanced_edward_seo/practice/day2/: langchain_basics.py  langchain_project.py
ai_advanced_edward_seo/practice/day3/: rag_agent_project.py
ai_advanced_edward_seo/utils/: api_key.py  file_io.py  web_driver.py
